# wordle-md

./: .gitignore  CMakeLists.txt  Makefile  README.md  symbol.txt
boot/: rom_head.c  sega.s
dev/: build_words.py  tiles.aseprite  tiles_old.aseprite
inc/: vdp.h
res/: audio.h  audio.res
src/: anim.c  anim_guess.c  common.h  gameover.c  graphics.c  instructions.c  joy.c  joy.h  main.c  menu.c  offset.s  pal.c  res.s  res_generated.c  res_generated.h  res_tiles_generated.s  sound.c  sound.h  title.c  words.s
src/echo/: echo.c  echoblob.h  echoblob.s  res_audio.h  res_audio.s
